--- a/github/workflows/deploy.yml
+++ b/github/workflows/deploy.yml
@@ -14,8 +14,10 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Setup Node
+      - name: Setup Node.js
         uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
 
       - name: Install dependencies
         uses: bahmutov/npm-install@v1
