--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
       - uses: actions/setup-node@v3
         with:
-          node-version: '16-nightly'
+          node-version: '16'
 
       - name: Install dependencies
         run: npm ci
