--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,9 @@ jobs:
         uses: actions/checkout@v3
         
       - name: Setup Node.js
-      - uses: actions/setup-node@v3
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16-nightly'
 
       - name: Install dependencies
         run: npm ci
