--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "emailjs-com": "^3.2.0",
     "express": "^4.18.2",
     "framer-motion": "^10.8.4",
+    "gh": "^2.8.9",
+    "gh-pages": "^5.0.0",
     "git": "^0.1.5",
     "maath": "^0.5.3",
+    "pages": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
