--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
+  "homepage": "https://zahidyasinmittha.github.io/codebyzahid",
   "name": "latest",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "predeploy":"npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "vite build",
     "preview": "vite preview",
     "deploy" : "gh-pages -d dist"
