--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "predeploy":"npm run build",
     "deploy" : "gh-pages -d build",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy" : "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "^9.58.1",
